# locarc

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  pypi.yml  release.yml  tests.yml
examples/: locarc.yaml
locarc/: callbacks.py  events.py  main.py  models.py  types.py  utils.py
locarc/providers/: __init__.py  pubsub.py
tests/: test_main.py
